# dissec-simulator-rs

./: .gitignore  Cargo.toml  README.md
dashboards/: full.py
src/: common.rs  main.rs  manager.rs  message.rs  node.rs  run.rs  shares.rs  tree_node.rs
src/manager/: manager.rs  mod.rs  recording.rs  setup.rs
src/message/: message.rs  message_content.rs  message_type.rs  mod.rs
src/node/: aggregator.rs  base_node.rs  channel.rs  contributor.rs  leaf_aggregator.rs  mod.rs  node.rs  querier.rs  role.rs
